--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,12 +16,10 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 dependencies {
+    implementation 'org.openftc:easyopencv:1.5.1'
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
-}
-
-dependencies {
-    implementation 'org.openftc:easyopencv:1.5.1'
+    implementation 'org.ftclib.ftclib:core:2.0.1'
 }
